[gd_scene load_steps=2 format=1]

[ext_resource path="res://HTTPHelper.gd" type="Script" id=1]

[node name="HTTPHelper" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="LogRequest" type="HTTPRequest" parent="."]

use_threads = false
body_size_limit = -1
max_redirects = 8

[node name="UserIDRequest" type="HTTPRequest" parent="."]

use_threads = false
body_size_limit = -1
max_redirects = 8

[node name="AttemptSessionIDRequest" type="HTTPRequest" parent="."]

use_threads = false
body_size_limit = -1
max_redirects = 8


